force-app/main/default/objects/Plot__c/fields/CFO_Discount__c.field-meta.xml
<CustomField>
    <fullName>CFO_Discount__c</fullName>
    <label>CFO Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>