force-app/main/default/objects/Plot__c/fields/Clubhouse_Charges__c.field-meta.xml
<CustomField>
    <fullName>Clubhouse_Charges__c</fullName>
    <label>Club House Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>