force-app/main/default/objects/Plot__c/fields/East_Facing_Charges__c.field-meta.xml
<CustomField>
    <fullName>East_Facing_Charges__c</fullName>
    <label>East Facing Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>