force-app/main/default/objects/Plot__c/fields/Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Floor_Number__c</fullName>
    <formula>CASE(
    Floor__c,
    &quot;1&quot;, 1,
    &quot;2&quot;, 2,
    &quot;3&quot;, 3,
    &quot;4&quot;, 4,
    &quot;5&quot;, 5,
    &quot;6&quot;, 6,
    &quot;7&quot;, 7,
    &quot;8&quot;, 8,
    &quot;9&quot;, 9,
    &quot;10&quot;, 10,
    &quot;11&quot;, 11,
    &quot;12&quot;, 12,
    &quot;13&quot;, 13,
    &quot;14&quot;, 14,
    &quot;15&quot;, 15,
    &quot;16&quot;, 16,
    &quot;17&quot;, 17,
    &quot;18&quot;, 18,
    &quot;19&quot;, 19,
    &quot;20&quot;, 20,
    &quot;21&quot;, 21,
    &quot;22&quot;, 22,
    &quot;23&quot;, 23,
    &quot;24&quot;, 24,
    &quot;25&quot;, 25,
    &quot;26&quot;, 26,
    &quot;27&quot;, 27,
    &quot;28&quot;, 28,
    &quot;29&quot;, 29,
    0  /* Default if no match */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>