force-app/main/default/objects/Plot__c/fields/Floor_Rise_Charge__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charge__c</fullName>
    <formula>IF(Floor_Number__c &gt;= 5, (Floor_Number__c - 4) * 25, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>