force-app/main/default/objects/Plot__c/fields/HOD_Discount__c.field-meta.xml
<CustomField>
    <fullName>HOD_Discount__c</fullName>
    <label>HOD Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>