force-app/main/default/objects/Plot__c/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <label>Mortgage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>