force-app/main/default/objects/Plot__c/fields/Mortgage_Status__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Status__c</fullName>
    <label>Mortgage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open for Sale</fullName>
            </value>
            <value>
                <fullName>Approval Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>