force-app/main/default/objects/Plot__c/fields/ORR_View_Charges__c.field-meta.xml
<CustomField>
    <fullName>ORR_View_Charges__c</fullName>
    <label>ORR View Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>