force-app/main/default/objects/Plot__c/fields/Rate_per_sqft__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_sqft__c</fullName>
    <label>Rate / Sq.ft on SBUA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>