force-app/main/default/objects/Plot__c/fields/Road_View__c.field-meta.xml
<CustomField>
    <fullName>Road_View__c</fullName>
    <label>Road View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>