force-app/main/default/objects/Plot__c/fields/Sizing__c.field-meta.xml
<CustomField>
    <fullName>Sizing__c</fullName>
    <label>Sizing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>