force-app/main/default/objects/Plot__c/fields/TL_Discount__c.field-meta.xml
<CustomField>
    <fullName>TL_Discount__c</fullName>
    <label>TL Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>