force-app/main/default/objects/Plot__c/recordTypes/Appartments.recordType-meta.xml
<RecordType>
    <fullName>Appartments</fullName>
    <active>true</active>
    <label>Appartments</label>
</RecordType>