force-app/main/default/objects/Plot__c/listViews/Zuari_Garden_City_Plots.listView-meta.xml
<ListView>
    <fullName>Zuari_Garden_City_Plots</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Rate_per_sqft__c</columns>
    <columns>Super_Built_up_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name1__c</field>
        <operation>equals</operation>
        <value>Zuari Garden City</value>
    </filters>
    <label>Zuari Garden City - Plots</label>
</ListView>